<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">客响</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <!-- loadingdialog -->
    <string name="readdata">正在读取云端数据，请稍候</string>
    <string name="faildata">加载数据失败，请检查网络</string>
    <!-- 博文的edittext -->
    <string name="saywhat">说点什么吧。。。</string>
    <string name="bloglist">贴子列表</string>
    
    	<string name="login_button_text">登录</string>
    		<string name="forget_button_text">忘记密码</string>
    		<string name="password_hint">请输入密码</string>
		<string name="account_hint">请输入工号</string>
		
		<string name="username">用户名</string>
		<string name="password">密码</string>
    <!-- 主页tab' -->
    <string name="main_home">首页</string>
    <string name="main_message_center">群组</string>
    <string name="main_profile">我</string>
    <string name="main_discover">搜索</string>
    <string name="main_more">更多...</string>
    <!--  -->
    <string name="all">全部</string>
    <string name="addfriend">添加好友</string>
    <string name="addgroup">添加群组</string>
    <string name="say">我也来说一句</string>
    <string name="keyword">请输入好友或群组名称</string>
    <string name="searchwords">请输入关键词</string>
    <string name="person_detail">详细资料</string>
    
    <string name="comment_retweet">转发</string>
    <string name="comment_comment">评论</string>
    
    <string name="message_center">消息</string>
    <string name="message_at">提到我的</string>
    <string name="message_commet">评论</string>
    <string name="message_good">赞</string>
  	<string name="cancel">取消</string>
  	<string name="back">返回</string>
  	<string name="edit">发贴</string>
  	<string name="save">保存</string>
  
  
  
  
  	<string name="config">设置</string>
	<string name="push_conf">推送设置</string>
	<string name="check_version">检查更新</string>
	<string name="password_conf">修改密码</string>
	<string name="person_introduce">个人信息</string>
	<string name="clear_cache">清空缓存</string>
	<string name="suggest">意见反馈</string>
	<string name="about">关于</string>
	<string name="admin_manager">管理员设置</string>
	<string name="forgetpwd">忘记密码</string>

<string name="phone">请输入手机号码</string>

<string name="phone_verycode">请输入验证码</string>

	
</resources>