<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e1e0de"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_top"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/username" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/account_hint"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/password" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>
  			 <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/text_forget"
                android:layout_below="@id/login_top"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:text="@string/forget_button_text" />

            <Button 
                android:id="@+id/btn_login"	
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/login_top"
                android:text="@string/login_button_text"/>
</RelativeLayout>