<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E6F3FB"
    >

    <TextView
        android:id="@id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dip"
        android:textSize="10sp"
        android:text="版本号：v111" />

    <EditText
        android:id="@id/accountEditText"
        android:layout_width="260dip"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/account_hint"
        android:inputType="phone" />

    <EditText
        android:id="@id/passwordEditText"
        android:layout_width="260dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountEditText"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@id/rememberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/passwordEditText"
        android:layout_below="@id/passwordEditText"
        android:text="记住密码" />

    <Button
        android:id="@id/forgetButton"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignBottom="@id/rememberCheckBox"
        android:layout_alignRight="@id/passwordEditText"
        android:gravity="center"
        android:text="@string/forget_button_text"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <Button
        android:id="@id/loginButton"
        android:layout_width="260dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/rememberCheckBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:background="@drawable/button_color"
        android:text="@string/login_button_text" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/accountEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dip"
        android:contentDescription="contentDescription" />

    <ProgressBar
        android:id="@id/progressBar1"
        style="?android:attr/popupWindowStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <ProgressBar
        android:id="@id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="10dip"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:padding="8dip"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dip"
        android:text="客户响应平台"
        android:textColor="#3B9BF2"
        android:textStyle="bold"
        android:textSize="30sp" />

</RelativeLayout>